name:                helics
version:             0.1.0
synopsis:            new relic®agent
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.Helics
  other-modules:       Network.Helics.Foreign.Common
                       Network.Helics.Foreign.Client
                       Network.Helics.Foreign.Transaction
                       Network.Helics.Foreign.System
  -- other-extensions:    
  build-depends:       base               >=4.7 && <4.8
                     , data-default-class >=0.0 && <0.1
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  build-tools:         hsc2hs
  extra-libraries:     newrelic-collector-client
                     , newrelic-transaction
                     , newrelic-common
  default-language:    Haskell2010

executable newrelic-example
  main-is:             example.hs
  build-depends:       base               >=4.7 && <4.8
                     , helics
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
