name:                new-relic-agent
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              HirotomoMoriwaki
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.NewRelic
  other-modules:       Network.NewRelic.Foreign.Common
                       Network.NewRelic.Foreign.Client
                       Network.NewRelic.Foreign.Transaction
  -- other-extensions:    
  build-depends:       base               >=4.7 && <4.8
                     , data-default-class >=0.0 && <0.1
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  build-tools:         hsc2hs
  extra-libraries:     newrelic-collector-client
                     , newrelic-transaction
                     , newrelic-common
  default-language:    Haskell2010

executable newrelic-example
  main-is:             example.hs
  build-depends:       base               >=4.7 && <4.8
                     , new-relic-agent
  ghc-options:         -Wall -O2
  default-language:    Haskell2010
